--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/possessed_toilet.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/possessed_toilet.yml
@@ -11,9 +11,9 @@
           state: disposal
     - type: RandomSpawner
       prototypes:
-        - ToiletMemeSpawner
-        - ToiletMemeSpawner
+        - ToiletDirtyWater
+        - ToiletEmpty
       chance: 1
       rarePrototypes:
         - MobMemeGoblinbane
-      rareChance: 0.1
+      rareChance: 0.05
