--- a/Resources/Prototypes/Corvax/Shipyard/Civilian/pts.yml
+++ b/Resources/Prototypes/Corvax/Shipyard/Civilian/pts.yml
@@ -15,7 +15,7 @@
   price: 13000
   category: Small
   group: Shipyard
-  shuttlePath: /Maps/_NF/Shuttles/pts.yml
+  shuttlePath: /Maps/Corvax/Shuttles/Civilian/pts.yml
   guidebookPage: Null
   class:
   - Civilian
@@ -23,7 +23,7 @@
 - type: gameMap
   id: PTS
   mapName: 'NC Бомбила'
-  mapPath: /Maps/_NF/Shuttles/pts.yml
+  mapPath: /Maps/Corvax/Shuttles/Civilian/pts.yml
   minPlayers: 0
   stations:
     PTS:
