--- a/Resources/Prototypes/Corvax/Shipyard/Civilian/Kudzu.yml
+++ b/Resources/Prototypes/Corvax/Shipyard/Civilian/Kudzu.yml
@@ -6,12 +6,15 @@
   price: 80000
   category: Medium
   group: Shipyard
-  shuttlePath: /Maps/Corvax/Shuttles/Kudzu.yml
+  shuttlePath: /Maps/Corvax/Shuttles/Civilian/Kudzu.yml
+  class:
+  - Cargo
+  - Civilian
 
 - type: gameMap
   id: Kudzu
   mapName: 'SLI Кудза'
-  mapPath: /Maps/Corvax/Shuttles/Kudzu.yml
+  mapPath: /Maps/Corvax/Shuttles/Civilian/Kudzu.yml
   minPlayers: 0
   stations:
     Kudzu:
