--- a/Resources/Prototypes/Corvax/Shipyard/Medical/pill.yml
+++ b/Resources/Prototypes/Corvax/Shipyard/Medical/pill.yml
@@ -5,12 +5,14 @@
   price: 17500 #меньше не поставлю, ибо нефиг
   category: Small
   group: Shipyard
-  shuttlePath: /Maps/Corvax/Shuttles/pill.yml
+  shuttlePath: /Maps/Corvax/Shuttles/Medical/pill.yml
+  class:
+  - Medical
 
 - type: gameMap
   id: pill
   mapName: 'NMS Таблетка'
-  mapPath: /Maps/Corvax/Shuttles/pill.yml
+  mapPath: /Maps/Corvax/Shuttles/Medical/pill.yml
   minPlayers: 0
   stations:
     pill:
