--- a/Resources/Prototypes/Corvax/Shipyard/Salvage/Asstedia.yml
+++ b/Resources/Prototypes/Corvax/Shipyard/Salvage/Asstedia.yml
@@ -5,12 +5,14 @@
   price: 30000
   category: Small
   group: Shipyard
-  shuttlePath: /Maps/Corvax/Shuttles/Asstedia.yml
+  shuttlePath: /Maps/Corvax/Shuttles/Salvage/Asstedia.yml
+  class:
+  - Salvage
 
 - type: gameMap
   id: Asstedia
   mapName: 'NMS Асцедия'
-  mapPath: /Maps/Corvax/Shuttles/Asstedia.yml
+  mapPath: /Maps/Corvax/Shuttles/Salvage/Asstedia.yml
   minPlayers: 0
   stations:
     Asstedia:
