--- a/Resources/Prototypes/Corvax/Shipyard/Salvage/Fang.yml
+++ b/Resources/Prototypes/Corvax/Shipyard/Salvage/Fang.yml
@@ -6,12 +6,14 @@
   price: 34450
   category: Medium
   group: Shipyard
-  shuttlePath: /Maps/Corvax/Shuttles/Fang.yml
+  shuttlePath: /Maps/Corvax/Shuttles/Salvage/Fang.yml
+  class:
+  - Salvage
 
 - type: gameMap
   id: Fang
   mapName: 'NMS Клык'
-  mapPath: /Maps/Corvax/Shuttles/Fang.yml
+  mapPath: /Maps/Corvax/Shuttles/Salvage/Fang.yml
   minPlayers: 0
   stations:
     Fang:
