--- a/Resources/Prototypes/Corvax/Shipyard/Salvage/Pot.yml
+++ b/Resources/Prototypes/Corvax/Shipyard/Salvage/Pot.yml
@@ -5,12 +5,14 @@
   price: 60000
   category: Medium
   group: Shipyard
-  shuttlePath: /Maps/Corvax/Shuttles/Pot.yml
+  shuttlePath: /Maps/Corvax/Shuttles/Salvage/Pot.yml
+  class:
+  - Salvage
 
 - type: gameMap
   id: Pot
   mapName: 'NMS Каструля'
-  mapPath: /Maps/Corvax/Shuttles/Pot.yml
+  mapPath: /Maps/Corvax/Shuttles/Salvage/Pot.yml
   minPlayers: 0
   stations:
     Pot:
