--- a/Resources/Prototypes/Corvax/Shipyard/Salvage/theScavenger.yml
+++ b/Resources/Prototypes/Corvax/Shipyard/Salvage/theScavenger.yml
@@ -5,12 +5,14 @@
   price: 36450
   category: Medium
   group: Shipyard
-  shuttlePath: /Maps/Corvax/Shuttles/theScavenger.yml
+  shuttlePath: /Maps/Corvax/Shuttles/Salvage/theScavenger.yml
+  class:
+  - Salvage
 
 - type: gameMap
   id: theScavenger
   mapName: 'NMS Мусорщик'
-  mapPath: /Maps/Corvax/Shuttles/theScavenger.yml
+  mapPath: /Maps/Corvax/Shuttles/Salvage/theScavenger.yml
   minPlayers: 0
   stations:
     theScavenger:
