--- a/Resources/Prototypes/Corvax/Shipyard/Service/kontrashef.yml
+++ b/Resources/Prototypes/Corvax/Shipyard/Service/kontrashef.yml
@@ -6,12 +6,14 @@
   price: 54500 # 13.5% markup (+2350 from init)
   category: Medium
   group: Shipyard
-  shuttlePath: /Maps/Corvax/Shuttles/kontrashef.yml
+  shuttlePath: /Maps/Corvax/Shuttles/Service/kontrashef.yml
+  class:
+  - Kitchen
 
 - type: gameMap
   id: kontrashef
   mapName: 'NC Эскимо'
-  mapPath: /Maps/Corvax/Shuttles/kontrashef.yml
+  mapPath: /Maps/Corvax/Shuttles/Service/kontrashef.yml
   minPlayers: 0
   stations:
     kontrashef:
