--- a/Resources/Prototypes/Corvax/Shipyard/Medical/Asklepi.yml
+++ b/Resources/Prototypes/Corvax/Shipyard/Medical/Asklepi.yml
@@ -5,12 +5,14 @@
   price: 52000
   category: Medium
   group: Shipyard
-  shuttlePath: /Maps/Corvax/Shuttles/Asklepi.yml
+  shuttlePath: /Maps/Corvax/Shuttles/Medical/Asklepi.yml
+  class:
+  - Medical
 
 - type: gameMap
   id: Asklepi
   mapName: 'NMS Асклеп'
-  mapPath: /Maps/Corvax/Shuttles/Asklepi.yml
+  mapPath: /Maps/Corvax/Shuttles/Medical/Asklepi.yml
   minPlayers: 0
   stations:
     Asklepi:
