--- a/Resources/Prototypes/Catalog/Fills/Crates/service.yml
+++ b/Resources/Prototypes/Catalog/Fills/Crates/service.yml
@@ -277,7 +277,7 @@
 #          prob: 0.03 # Frontier
 #        - id: MobMouse # Frontier
 #          prob: 0.05 # Frontier
-          # Food Packaging # Frontier
+          # Food Packaging
         - id: FoodPacketBoritosTrash
           prob: 0.1
         - id: FoodPacketCheesieTrash
