--- a/Resources/Maps/_NF/Shuttles/Nfsd/fighter.yml
+++ b/Resources/Maps/_NF/Shuttles/Nfsd/fighter.yml
@@ -112,19 +112,17 @@ entities:
       data:
         tiles:
           0,0:
-            0: 30583
-          0,1:
-            0: 1
-            1: 6
+            0: 819
           0,-1:
-            0: 30583
+            0: 12592
           -1,0:
-            0: 52428
+            0: 34952
+          0,1:
+            1: 6
           -1,1:
-            0: 12
+            0: 8
           -1,-1:
             1: 17476
-            0: 34952
         uniqueMixes:
         - volume: 2500
           temperature: 293.15
@@ -142,7 +140,7 @@ entities:
           - 0
           - 0
         - volume: 2500
-          temperature: 293.15
+          immutable: True
           moles:
           - 0
           - 0
@@ -181,7 +179,7 @@ entities:
     - type: Transform
       pos: 0.5,3.5
       parent: 1
-- proto: AtmosDeviceFanTiny
+- proto: AtmosDeviceFanDirectional
   entities:
   - uid: 29
     components:
@@ -434,6 +432,13 @@ entities:
     - type: Transform
       pos: 1.5,2.5
       parent: 1
+- proto: ExtinguisherCabinet
+  entities:
+  - uid: 104
+    components:
+    - type: Transform
+      pos: -1.5,3.5
+      parent: 1
 - proto: GeneratorWallmountAPU
   entities:
   - uid: 48
@@ -599,6 +604,20 @@ entities:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: -0.5,3.5
+      parent: 1
+- proto: SignNfsd
+  entities:
+  - uid: 102
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 0.5,4.5
+      parent: 1
+  - uid: 103
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 0.5,-3.5
       parent: 1
 - proto: SmallGyroscopeNfsd
   entities:
