Change cases to heavy to fit weapons

--- a/Resources/Prototypes/_NF/Catalog/Fills/Items/weapon_cases_expedition.yml
+++ b/Resources/Prototypes/_NF/Catalog/Fills/Items/weapon_cases_expedition.yml
@@ -135,7 +135,7 @@
       amount: 1
 
 - type: entity
-  parent: WeaponCaseLong
+  parent: WeaponCaseHeavy
   id: WeaponCaseLongShotgunDoubleBarreledExpedition
   suffix: Dungeon, Double Barreled
   categories: [ HideSpawnMenu ]
@@ -161,7 +161,7 @@
       amount: 1
 
 - type: entity
-  parent: WeaponCaseLong
+  parent: WeaponCaseHeavy
   id: WeaponCaseLongKammererExpedition
   suffix: Dungeon, Kammerer
   categories: [ HideSpawnMenu ]
@@ -339,7 +339,7 @@
     - id: WeaponRifleSVT
       amount: 1
     - id: MagazineLightRifleLowCapacity
-      amount: 2 
+      amount: 2
 
 # Energy
 - type: entity
@@ -503,7 +503,7 @@
 
 # LMG
 - type: entity
-  parent: WeaponCaseLong
+  parent: WeaponCaseHeavy
   id: WeaponCaseLongLightMachineGunL6
   suffix: Dungeon, L6
   categories: [ HideSpawnMenu ]
