--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Projectiles/crossbow_bolts.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Projectiles/crossbow_bolts.yml
@@ -169,6 +169,8 @@
       types:
         Piercing: 10
         Slash: 20
+  - type: StaticPrice
+    price: 25
 
 - type: entity
   parent: BaseCrossbowBolt
