--- a/Resources/Prototypes/_NF/Catalog/Fills/Items/weapon_cases_expedition.yml
+++ b/Resources/Prototypes/_NF/Catalog/Fills/Items/weapon_cases_expedition.yml
@@ -135,7 +135,7 @@
       amount: 1
 
 - type: entity
-  parent: WeaponCaseHeavy # TODO: long gun case
+  parent: WeaponCaseLong
   id: WeaponCaseLongShotgunDoubleBarreledExpedition
   suffix: Dungeon, Double Barreled
   categories: [ HideSpawnMenu ]
@@ -161,7 +161,7 @@
       amount: 1
 
 - type: entity
-  parent: WeaponCaseHeavy # TODO: long gun case
+  parent: WeaponCaseLong
   id: WeaponCaseLongKammererExpedition
   suffix: Dungeon, Kammerer
   categories: [ HideSpawnMenu ]
@@ -503,7 +503,7 @@
 
 # LMG
 - type: entity
-  parent: WeaponCaseHeavy # TODO: handheld weapon long case?
+  parent: WeaponCaseLong
   id: WeaponCaseLongLightMachineGunL6
   suffix: Dungeon, L6
   categories: [ HideSpawnMenu ]
