--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Projectiles/crossbow_bolts.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Projectiles/crossbow_bolts.yml
@@ -115,6 +115,8 @@
   - type: Tag
     tags:
     - CrossbowBolt
+  - type: StaticPrice
+    price: 25
 
 - type: entity
   parent: BaseCrossbowBolt
@@ -141,6 +143,8 @@
     - state: solution1
       map: ["enum.SolutionContainerLayers.Fill"]
       visible: false
+  - type: StaticPrice
+    price: 25
 
 - type: Tag
   id: CrossbowBoltBroadhead
