No discounts for cheapo shoes

--- a/Resources/Prototypes/_NF/Recipes/Lathes/clothes.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/clothes.yml
@@ -95,6 +95,7 @@
 - type: latheRecipe
   id: ClothingHandsMercenaryGlovesCombat
   result: ClothingHandsMercenaryGlovesCombat
+  applyMaterialDiscount: false
   completetime: 3
   category: ClothesNF
   materials:
@@ -104,6 +105,7 @@
 - type: latheRecipe
   id: ClothingHandsGlovesCombat
   result: ClothingHandsGlovesCombat
+  applyMaterialDiscount: false
   completetime: 3
   category: ClothesNF
   materials:
@@ -114,6 +116,7 @@
 - type: latheRecipe
   id: ClothingShoesBootsMercenary
   result: ClothingShoesBootsMercenary
+  applyMaterialDiscount: false
   completetime: 3
   category: ClothesNF
   materials:
@@ -123,6 +126,7 @@
 - type: latheRecipe
   id: ClothingShoesBootsCombat
   result: ClothingShoesBootsCombat
+  applyMaterialDiscount: false
   completetime: 3
   category: ClothesNF
   materials:
@@ -132,6 +136,7 @@
 - type: latheRecipe
   id: ClothingShoesBootsJack
   result: ClothingShoesBootsJack
+  applyMaterialDiscount: false
   completetime: 3
   category: ClothesNF
   materials:
@@ -141,6 +146,7 @@
 - type: latheRecipe
   id: ClothingShoesBootsPunkRandomized
   result: ClothingShoesBootsPunkRandomized
+  applyMaterialDiscount: false
   completetime: 3
   category: ClothesNF
   materials:
