--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -268,7 +268,7 @@
       - ClothingOuterHardsuitSalvage
       - ClothingOuterHardsuitLuxury
       - ClothingOuterHardsuitMaximPrototype
-      - ClothingHeadHelmetAncient
+#      - ClothingHeadHelmetAncient
       - ClothingOuterHardsuitAncientEVA
   - type: EmagLatheRecipes
     emagStaticRecipes:
