--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -203,10 +203,10 @@
       - ClothingHeadHatCone
       - Flare
       - Durathread # Frontier
-      - ClothingOuterSuitEmergency # Frontier
+#      - ClothingOuterSuitEmergency # Frontier
       - ClothingHeadHelmetEVA # Frontier
       - ClothingHeadHelmetEVALarge # Frontier
-      - ClothingOuterHardsuitEVA # Frontier
+#      - ClothingOuterHardsuitEVA # Frontier
       - ClothingOuterEVASuitContractor # Frontier
       - ClothingOuterEVASuitPilot # Frontier
   - type: EmagLatheRecipes
@@ -400,7 +400,7 @@
       - ClothingOuterHardsuitScaf # Frontier
       - ClothingOuterHardsuitPilot # Frontier
       - ClothingOuterHardsuitMaximPrototype # Frontier
-      - ClothingHeadHelmetAncient # Frontier
+#      - ClothingHeadHelmetAncient # Frontier
       - ClothingOuterHardsuitAncientEVA # Frontier
       - ConstructionBagOfHolding # Frontier
       - ServiceSelectiveDropper # Frontier
@@ -852,7 +852,7 @@
       - WeaponLaserCarbinePractice
       - Zipties
       - ThrusterSecurityMachineCircuitboard # Frontier
-      - ClothingOuterSuitEmergency # Frontier
+#      - ClothingOuterSuitEmergency # Frontier
       - ClothingOuterEVASuitNfsd # Frontier
       - ClothingHeadHelmetEVA # Frontier
       - ClothingHeadHelmetEVALarge # Frontier
@@ -1038,7 +1038,7 @@
       - ClothingEyesGlassesChemical
       - WhiteCane
       - ClothingOuterEVASuitMedic # Frontier
-      - ClothingOuterSuitEmergency # Frontier
+#      - ClothingOuterSuitEmergency # Frontier
       - ClothingOuterHardsuitVoidParamed # Frontier
       - BaseChemistryEmptyVial # Frontier
       - PowerCellSmall # Frontier
