--- a/Resources/Prototypes/Nyanotrasen/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Nyanotrasen/Entities/Structures/Machines/lathe.yml
@@ -431,7 +431,7 @@
       - ClothingOuterHardsuitEngineering # Frontier
       - ClothingOuterHardsuitEngineeringWhite # Frontier
 #      - ClothingHeadHelmetAncient # Frontier
-      - ClothingOuterHardsuitAncientEVA # Frontier
+#      - ClothingOuterHardsuitAncientEVA # Frontier
       - ConstructionBagOfHolding # Frontier
   - type: MaterialStorage
     whitelist:
