--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -269,7 +269,7 @@
       - ClothingOuterHardsuitLuxury
       - ClothingOuterHardsuitMaximPrototype
 #      - ClothingHeadHelmetAncient
-      - ClothingOuterHardsuitAncientEVA
+#      - ClothingOuterHardsuitAncientEVA
   - type: EmagLatheRecipes
     emagStaticRecipes:
        - ShellTranquilizer
