--- a/Resources/Prototypes/_NF/Entities/Clothing/OuterClothing/softsuits.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/OuterClothing/softsuits.yml
@@ -32,6 +32,10 @@
       toggleable-clothing: !type:ContainerSlot {}
       storagebase: !type:Container
         ents: []
+  - type: PhysicalComposition
+    materialComposition:
+      Durathread: 100
+      Cloth: 50
 
 # DEPARTMENTAL
 - type: entity
