--- a/Resources/Prototypes/_NF/Entities/Structures/Power/Generation/portable_generator.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Power/Generation/portable_generator.yml
@@ -94,6 +94,7 @@
       radiationColor: "#00bfff"
     - type: SolidFuelGeneratorAdapter
       fuelMaterial: Bananium
+      ejectedFuelProtoId: FuelBananium
     - type: MaterialStorage
       materialWhiteList: [Bananium]
     - type: PowerMonitoringDevice
