--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_meme_goblinbane_minions.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_meme_goblinbane_minions.yml
@@ -220,7 +220,7 @@
 - type: entity
   id: MopBucketDimnsionPortal
   name: mop bucket portal
-  parent:  [ MobIncorporealBase, CarpStatue ]
+  parent:  [ MobIncorporealBase, XenoWardingTower ]
   description: A portal to a mop bucket dimension. Obviously. It says so on the label at the corner.
   components:
   - type: NpcFactionMember
