--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_meme_goblinbane.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_meme_goblinbane.yml
@@ -142,7 +142,7 @@
     healRate: 15.0
     whitelist:
       components:
-      - MobState
+      - Goblin
       - Door
       tags:
       - Wall
