--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_explorers.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_explorers.yml
@@ -6,6 +6,7 @@
   - MobNonHumanHostileBase
   - MobHumanoidInvetory
   - MobHumanoidHostileAISimpleRanged
+  - MobRestrictions
   id: MobExplorerBase
   components:
   - type: NpcFactionMember
