--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_xeno.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_xeno.yml
@@ -1,6 +1,6 @@
 # BASE
 - type: entity
-  parent: MobNonHumanHostileBase
+  parent: [ MobNonHumanHostileBase, MobRestrictions ]
   id: BaseMobXenoExpeditions
   name: xeno
   description: They mostly come at night. Mostly.
