--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_argocyte.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_argocyte.yml
@@ -1,6 +1,6 @@
 # BASE
 - type: entity
-  parent: MobNonHumanHostileBase
+  parent: [ MobNonHumanHostileBase, MobRestrictions ]
   id: BaseMobArgocyteExpeditions
   name: argocyte
   description: |-
