--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_carp.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_carp.yml
@@ -2,6 +2,7 @@
 - type: entity
   parent:
   - MobNonHumanHostileBase
+  - MobRestrictions
   id: BaseMobCarpExpeditions
   name: carp
   description: A variant of the common space carp, evolved to "swim" through gravity. Equally dangerous.
