--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_mercenaries.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_mercenaries.yml
@@ -7,6 +7,7 @@
   - MobNonHumanHostileBase
   - MobHumanoidInvetorySimplified
   - MobHumanoidHostileAISimpleRanged
+  - MobRestrictions
   id: MobMercenaryBase
   description: A mercenary, merc, soldier of fortune, hired gun, dog of war.
   components:
