--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_explorers.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_explorers.yml
@@ -6,7 +6,7 @@
   - MobNonHumanHostileBase
   - MobHumanoidInvetory
   - MobHumanoidHostileAISimpleRanged
-  - MobRestrictions
+  - NFMobRestrictions
   id: MobExplorerBase
   components:
   - type: NpcFactionMember
