--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_wizardfederation.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_wizardfederation.yml
@@ -8,7 +8,7 @@
   - MobHumanoidInvetory
   - MobHumanoidHostileAISimpleRanged
   - MobLaserReflect # Added to prevent laser abuse from players
-  - MobRestrictions
+  - NFMobRestrictions
   id: MobWizFedlBase
   components:
   - type: NpcFactionMember
@@ -189,7 +189,7 @@
   parent:
   - MobNonHumanHostileBase
   - MobHumanoidHostileAISimpleMelee
-  - MobTimedDespawn30
+  - NFMobTimedDespawn30
   id: WaterElementalConjured
   components:
   - type: HTN
