--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_meme_goblinbane.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_meme_goblinbane.yml
@@ -153,7 +153,7 @@
 - type: entity
   id: MobMemeGoblinbane
   name: "The Goblinbane"
-  parent: [ BaseMobMemeGoblinbane, MobRestrictions ]
+  parent: [ BaseMobMemeGoblinbane, NFMobRestrictions ]
   description: A Daemon of Cleanliness from the time before time (but after the first toilet was built). An ancient enemy of goblinkind.
   categories: [ HideSpawnMenu ]
 
