--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_meme_goblinbane_minions.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_meme_goblinbane_minions.yml
@@ -2,7 +2,7 @@
 - type: entity
   id: MobMemePossessedMop
   name: possessed mop
-  parent: [ MobIncorporealBase, BaseMobMemeGoblinbane, MobTimedDespawn120 ]
+  parent: [ MobIncorporealBase, BaseMobMemeGoblinbane, NFMobTimedDespawn120 ]
   categories: [ HideSpawnMenu ]
   components:
   - type: HTN
@@ -73,7 +73,7 @@
 - type: entity
   id: MobMemePossessedSpray
   name: possessed spray
-  parent: [ BaseMobMemeGoblinbane, MobTimedDespawn120 ]
+  parent: [ BaseMobMemeGoblinbane, NFMobTimedDespawn120 ]
   categories: [ HideSpawnMenu ]
   components:
   - type: HTN
@@ -146,7 +146,7 @@
 - type: entity
   id: MobMemePossessedBucket
   name: possessed mop bucket
-  parent: [ BaseMobMemeGoblinbane, MobTimedDespawn120 ]
+  parent: [ BaseMobMemeGoblinbane, NFMobTimedDespawn120 ]
   categories: [ HideSpawnMenu ]
   components:
   - type: HTN
@@ -214,7 +214,7 @@
 - type: entity
   id: MopBucketDimnsionPortal
   name: mop bucket portal
-  parent:  [ MobIncorporealBase, XenoWardingTower, MobTimedDespawn80 ]
+  parent:  [ MobIncorporealBase, XenoWardingTower, NFMobTimedDespawn80 ]
   description: A portal to a mop bucket dimension. Obviously. It says so on the label at the corner.
   components:
   - type: NpcFactionMember
