--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_rogue_ai.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_rogue_ai.yml
@@ -48,7 +48,7 @@
   - MobHumanoidInvetorySimplified
   - MobRogueSiliconAISimpleRanged
   - MobLaserReflect # Added to prevent laser abuse from players
-  - MobRestrictions
+  - NFMobRestrictions
   id: MobRogueSiliconBase
   components:
   - type: Damageable
