--- a/Resources/Maps/_NF/Dungeon/salvage_outpost.yml
+++ b/Resources/Maps/_NF/Dungeon/salvage_outpost.yml
@@ -10995,7 +10995,7 @@ entities:
     - type: Transform
       pos: 36.5,32.5
       parent: 1653
-- proto: ResearchAndDevelopmentServer
+- proto: MachineFrame
   entities:
   - uid: 1883
     components:
