--- a/Resources/Maps/_NF/Dungeon/virology_lab.yml
+++ b/Resources/Maps/_NF/Dungeon/virology_lab.yml
@@ -9984,7 +9984,7 @@ entities:
     - type: Transform
       pos: 10.5,1.5
       parent: 1653
-- proto: ResearchAndDevelopmentServer
+- proto: MachineFrame
   entities:
   - uid: 864
     components:
