--- a/Resources/Prototypes/_NF/Entities/Effects/emp.yml
+++ b/Resources/Prototypes/_NF/Entities/Effects/emp.yml
@@ -7,3 +7,11 @@
   - type: EmpBlast
 #  - type: TimedDespawn
 #    lifetime: 1
+  - type: EffectVisuals
+  - type: Tag
+    tags:
+      - HideContextMenu
+  - type: EmitSoundOnSpawn
+    sound: 
+      path: /Audio/Effects/Lightning/lightningbolt.ogg
+  - type: AnimationPlayer
